--- a/indexcss.css
+++ b/indexcss.css
@@ -1,6 +1,15 @@
 div{
     height: 200px;
+    min-height: 350px;
     width: 200px;
+    min-width: 300px;
     background-color: aqua;
     border: 2px solid black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 23px;
+    margin: 50px;
+    margin-top: 7px;
+    margin-right:33px;
+    margin-bottom: 33px;
+    margin left: 33px;
 }
