--- a/CSSPodstawy/indexcss.css
+++ b/CSSPodstawy/indexcss.css
@@ -4,8 +4,8 @@ div{
     width: 200px;
     min-width: 300px;
     background-color: aqua;
-    border: 2px solid black;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: 2px dashed rgb(70, 66, 66);
+    font-family: 'Segoe UI'
     font-size: 23px;
     margin: 50px;
     margin-top: 7px;
