--- a/projekt/style.css
+++ b/projekt/style.css
@@ -8,6 +8,7 @@
 .login-section {
   display: flex;
   margin: 64px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 .login-form {
   display: flex;
@@ -24,6 +25,7 @@
   border-radius: 7px;
   width: 1079px;
   height: 790px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .registration {
   width: 420px;
@@ -36,13 +38,14 @@
   border-color: #413fb5;
   box-sizing: border-box;
   margin-bottom: 10px;
-  font-family: Rubik;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: 17px;
   letter-spacing: 0px;
   text-align: center;
+  cursor: pointer;
 }
 
 #freereg {
@@ -56,7 +59,7 @@
   border-color: #413fb5;
   box-sizing: border-box;
   margin-bottom: 10px;
-  font-family: Rubik;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -64,6 +67,7 @@
   letter-spacing: 0px;
   text-align: center;
   color: white;
+  cursor: pointer;
 }
 p {
   font-size: 16px;
@@ -77,4 +81,8 @@ p {
 p span {
   background: #ffffff;
   padding: 0 18px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.pull-left {
+  float: left;
 }
