--- a/projekt/style.css
+++ b/projekt/style.css
@@ -5,28 +5,60 @@
   margin: 64px 0px 64px 0px;
 }
 
-.login-section {
-  display: flex;
-  margin: 64px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-}
 .login-form {
   display: flex;
   flex-direction: column;
-  margin: 48px 80px;
+  margin: 48px;
 }
 
-.logo {
+.firsthalf {
   width: 250px;
+  color: #413fb5;
+  font-family: -apple-system, BlinkMacSystemFont, "Rubik", "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.secondhalf {
+  width: 250px;
+  color: #413fb5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.logo {
+  width: 249px;
+  height: 36px;
+  top: 72px;
+  right: 835px;
+  bottom: 972px;
+  left: 836px;
 }
 
 .login-section {
-  box-shadow: 0px 0px 7px rgba(100, 96, 106, 0.2);
-  border-radius: 7px;
+  display: flex;
+  margin-top: 64px;
   width: 1079px;
   height: 790px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  top: 172px;
+  right: 421px;
+  bottom: 118px;
+  left: 420px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-shadow: 0px 0px 7px rgba(100, 96, 106, 0.2);
+  border-radius: 7px;
 }
+
 .registration {
   width: 420px;
   height: 50px;
@@ -38,7 +70,8 @@
   border-color: #413fb5;
   box-sizing: border-box;
   margin-bottom: 10px;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -59,7 +92,8 @@
   border-color: #413fb5;
   box-sizing: border-box;
   margin-bottom: 10px;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -69,6 +103,7 @@
   color: white;
   cursor: pointer;
 }
+
 p {
   font-size: 16px;
   width: 100%;
@@ -81,8 +116,114 @@ p {
 p span {
   background: #ffffff;
   padding: 0 18px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
 .pull-left {
   float: left;
+}
+
+.logo-holder {
+  display: flex;
+  justify-content: center;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+#first-name {
+  height: 56px;
+  width: 204px;
+  left: 0px;
+  top: 10px;
+  border-radius: 7px;
+  border: 1px solid #EDEBF0z;
+
+}
+
+input,
+input::-webkit-input-placeholder {
+    font-size: 20px;
+    line-height: 3;
+    
+}
+
+#last-name {
+  height: 56px;
+  width: 204px;
+  left: 0px;
+  top: 10px;
+  border-radius: 7px;
+  border: 1px solid #edebf0;
+}
+
+.input-data {
+  display: flex;
+  flex-direction: column;
+}
+#email-address {
+  height: 56px;
+  width: 423px;
+  left: 0px;
+  top: 10px;
+  border-radius: 7px;
+  border: 1px solid #edebf0;
+  box-sizing: border-box;
+  border-radius: 7px;
+}
+
+#password {
+  height: 56px;
+  width: 423px;
+  left: 0px;
+  top: 10px;
+  border-radius: 7px;
+  border: 1px solid #edebf0;
+  box-sizing: border-box;
+  border-radius: 7px;
+}
+.checkbox {
+  display: flex;
+}
+.form-group {
+  height: 56px;
+  width: 204px;
+  left: 0px;
+  top: 10px;
+  border-radius: 7px;
+  border: 1px solid #EDEBF0z;
+}
+.form-group > label {
+  position: absolute;
+  top: -1px;
+  left: 20px;
+  background-color: white;
+}
+
+.form-group > input {
+  border: none;
+}
+
+.personal-data {
+  display: flex;
+}
+.image {
+  width: 496px;
+  height: 790px;
+  top: 172px;
+  right: 421px;
+  bottom: 118px;
+  left: 1003px;
+  border-radius: 7px;
+}
+.heading {
+  height: 28px;
+  width: 461.9372253417969px;
+  left: 500px;
+  top: 220px;
+  border-radius: nullpx;
+  margin: 48px;
 }
